--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -53,8 +53,22 @@
                 android:inputType="textCapWords"
                 style="@style/EditorFieldStyle" />
         </LinearLayout>
-    </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/edit_phone_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@mipmap/ic_phone"/>
+        <EditText
+            android:id="@+id/edit_phone_number"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text=""/>
+    </LinearLayout>
     <!-- Gender category -->
     <LinearLayout
         android:id="@+id/container_province"
@@ -153,6 +167,7 @@
             android:onClick="getGPSclicked"/>
 
     </LinearLayout>
+
     <!-- Measurement category -->
     <LinearLayout
         android:id="@+id/container_measurement"
@@ -185,5 +200,17 @@
                 android:text="@string/unit_land_weight"
                 style="@style/EditorUnitsStyle"/>
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Home Price:"/>
+            <EditText
+                android:id="@+id/home_price"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
