--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -103,8 +103,8 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/camphoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
         <Button
             android:id="@+id/takephoto"
             android:layout_width="150dp"
@@ -167,7 +167,49 @@
             android:onClick="getGPSclicked"/>
 
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home Quantity:"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/button_increment"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="2dp"
+            android:text="+"
+            android:onClick="incrementQuantity"/>
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="0"
+            android:textColor="@android:color/black" />
+        <Button
+            android:id="@+id/button_decrement"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
+            android:padding="2dp"
+            android:text="-"
+            android:onClick="decrementQuantity"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home Price:"/>
+        <EditText
+            android:id="@+id/home_price"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <!-- Measurement category -->
     <LinearLayout
         android:id="@+id/container_measurement"
@@ -181,11 +223,12 @@
             style="@style/CategoryStyle" />
 
         <!-- Input fields -->
-        <RelativeLayout
+        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="2"
-            android:paddingLeft="4dp">
+            android:paddingLeft="4dp"
+            android:orientation="horizontal">
 
             <!-- Weight field -->
             <EditText
@@ -199,18 +242,9 @@
                 android:id="@+id/label_size_units"
                 android:text="@string/unit_land_weight"
                 style="@style/EditorUnitsStyle"/>
-        </RelativeLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home Price:"/>
-            <EditText
-                android:id="@+id/home_price"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content" />
         </LinearLayout>
+
     </LinearLayout>
+
+
 </LinearLayout>
