--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,11 +18,19 @@
     tools:context="com.example.android.peerajak.lands.DetailActivity">
     <ImageView
         android:id="@+id/detail_land_image"
-        android:layout_width="300dp"
-        android:layout_height="200dp"/>
+        android:layout_width="200dp"
+        android:layout_height="125dp"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            style="@style/CategoryStyle"
+            android:text="Call Now:"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <ImageView
         android:id="@+id/detail_phone_icon"
         android:layout_width="30dp"
@@ -33,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:text=""/>
+        </LinearLayout>
     </LinearLayout>
     <!-- Overview category -->
     <LinearLayout
@@ -152,18 +161,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/takephoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BUY"
-            android:onClick="buy"/>
-
-    </LinearLayout>
     <!-- Measurement category -->
     <LinearLayout
         android:id="@+id/detailcontainer_measurement"
@@ -200,7 +198,26 @@
 
 
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/takephoto"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BUY"
+            android:onClick="buy"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
 
