--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -26,7 +26,7 @@
         android:orientation="horizontal">
         <TextView
             style="@style/CategoryStyle"
-            android:text="Call Now:"/>
+            android:text="Order More:"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -207,7 +207,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
         <Button
-            android:id="@+id/takephoto"
+            android:id="@+id/buy_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
