--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,31 +16,37 @@
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
     tools:context="com.example.android.peerajak.lands.DetailActivity">
+
     <ImageView
         android:id="@+id/detail_land_image"
         android:layout_width="200dp"
-        android:layout_height="125dp"/>
+        android:layout_height="125dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             style="@style/CategoryStyle"
-            android:text="Order More:"/>
+            android:text="Order More:" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/detail_phone_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@mipmap/ic_phone"/>
-    <TextView
-        android:id="@+id/detail_phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text=""/>
+
+            <ImageView
+                android:id="@+id/detail_phone_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@mipmap/ic_phone" />
+
+            <TextView
+                android:id="@+id/detail_phone_number"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="" />
         </LinearLayout>
     </LinearLayout>
     <!-- Overview category -->
@@ -131,15 +137,16 @@
             android:text="status:" />
 
 
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home Quantity:"/>
+            android:text="Home Quantity:" />
 
         <TextView
             android:id="@+id/detail_quantity_text_view"
@@ -149,13 +156,16 @@
             android:text="0"
             android:textColor="@android:color/black" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home Price:"/>
+            android:text="Home Price:" />
+
         <TextView
             android:id="@+id/detail_home_price"
             android:layout_width="100dp"
@@ -196,27 +206,30 @@
         </LinearLayout>
 
 
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <Button
             android:id="@+id/buy_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="BUY"
-            android:onClick="buy"/>
+            android:onClick="buy"
+            android:text="BUY" />
+
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
